# izkaypro

./: .gitignore  0  0x0000  0x0100  0x0359  0x100  100h  AGENTS.md  Cargo.toml  Kaypro10_PhasePlan_Final.docx  README.md  hdfmt.com  izkaypro.toml  izkaypro.toml.bak  load4mat.sub  reload.sub  trom34.asm
.github/workflows/: release.yml
disks/: Basic80 Games.img  blank_dsdd.img  blank_ssdd.img  blank_sssd.img  cpm22-emudiags.img  cpm22-kaypro4-blank.img  cpm22-rom149-blank.img  cpm22g-rom292a-62k.img  cpm22g-rom292a.img  format.com  k4-84-Diagnostics.img  k4-84-Rogue.img  k4-84-WordStar.img  k4-84-kermit.img  k4-84-qterm.img  k4-84-zde.img  k484-cpm22f-boot.img  k484_turborom_63k_boot copy.img  k484_turborom_63k_boot.img  k4test.img  kayclk.com  kayplus1.img  kayplus2.img  kayplus_boot copy 2.img  kayplus_boot.img  kayplus_install.img  kmovcpm.com  kmovcpm.z  orbquest-kaypro.img  osborne-blank.img  test-cpm22-dsdd-blank.img  time.com  trek.bas  zde.com
disks/blank_disks/: cpm22-kaypro4-blank.img
disks/comm/: k4-84-mite301.img  k4-84-qterm.img
disks/games/: Games.img  Vtrek.img  (+2 more)
doc/: CHANGELOG.html  TURBOROM.txt  diag4.com  diag4.mac  emutest.asm  emutest.com  hdfmt_analysis.md  kpgraphic.txt
roms/: trom34.rom
src/: config.rs  diagnostics.rs  floppy_controller.rs  format_test.rs  hard_disk.rs  hard_disk_image.rs  kaypro_machine.rs  keyboard_unix.rs  keyboard_win.rs  main.rs  media.rs  renderer.rs  rtc.rs  screen.rs  sio.rs  sy6545.rs  wd1002.rs
tools/: mkrtctest.py  rtctest.z
zout/: rtctest.250.cas  rtctest.ams  rtctest.bds  rtctest.cim  rtctest.cmd  rtctest.hex  rtctest.lst  rtctest.mds  rtctest.tap  test.250.cas  test.ams  test.bds  test.cmd  test.hex  test.lst  test.mds  test.tap
(+27 files in other folders)
