[package]
name = "izkaypro"
version = "0.10.0"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>", "Eric Neilson <eric@neilsonhart.com>"]
edition = "2018"
repository = "https://github.com/ivanizag/izkaypro"

[dependencies]
iz80 = "^0.3.5"
#iz80 = {path = "../iz80"}
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
termios = "^0.3.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
